# Spectra

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  TUI_IMPLEMENTATION_PROMPT.md  spectra.json.example
.claude/skills/enforce-coding/: SKILL.md  semantic-rules.md  type-and-style.md
cmake/patches/: ftxui-terminal-clamp.patch
config/rules/: default.yaml
include/sec/: ai.hpp  config.hpp  decoder.hpp  detector.hpp  engine.hpp  exception.hpp  fault.hpp  memory.hpp  mitm.hpp  qt.hpp  scanner.hpp  sec.hpp  store.hpp  transport.hpp
include/sec/ai/: feature.hpp  model.hpp  runtime.hpp
include/sec/cli/: application.hpp
include/sec/decoder/: dns.hpp  frame.hpp  ftp.hpp  http.hpp  pipeline.hpp  smtp.hpp  socks5.hpp  ssh.hpp  tls.hpp  util.hpp
include/sec/detector/: alert.hpp  anomaly.hpp  detection_pipeline.hpp  forest.hpp  pipeline.hpp  port_scan.hpp  port_scan_detector.hpp  rule.hpp  rule_engine.hpp
include/sec/engine/: capture.hpp  context.hpp  scheduler.hpp
include/sec/exception/: deviant.hpp  network.hpp  protocol.hpp  security.hpp
include/sec/fault/: code.hpp  compatible.hpp  handling.hpp
include/sec/memory/: container.hpp  pool.hpp
include/sec/mitm/: arp.hpp  arp_detect.hpp  dns.hpp  dns_detect.hpp  pipeline.hpp  tls.hpp  tls_detect.hpp
include/sec/qt/: alert_model.hpp  application.hpp  device_model.hpp  traffic_model.hpp
include/sec/sandbox/: analyzer.hpp  etw_monitor.hpp  hyperv.hpp  monitor.hpp  qemu.hpp  report.hpp  strace_monitor.hpp  types.hpp  virtualbox.hpp  vm_backend.hpp  vmi_monitor.hpp
include/sec/scanner/: arp.hpp  arp_scanner.hpp  device.hpp  fingerprint.hpp  mdns.hpp  mdns_scanner.hpp  port.hpp  port_scanner.hpp  ssdp.hpp  ssdp_scanner.hpp
include/sec/store/: database.hpp  migration.hpp  model.hpp  persist.hpp  query.hpp  util.hpp
include/sec/transport/: pcap.hpp  raw.hpp  transmission.hpp
include/sec/tui/: agent.hpp  ai_chat.hpp  application.hpp  chat.hpp  command.hpp  command_registry.hpp  event.hpp  event_queue.hpp  input.hpp  layout.hpp  markdown.hpp  markdown_renderer.hpp  syntax.hpp  syntax_highlight.hpp  terminal.hpp  terminal_renderer.hpp  text_input.hpp  theme.hpp  tui.hpp
include/sec/tui/components/: alert_list.hpp  chat.hpp  chat_panel.hpp  device_table.hpp  input.hpp  input_bar.hpp  scan_panel.hpp  side.hpp  sidebar.hpp  status.hpp  status_bar.hpp  traffic_view.hpp
include/sec/util/: format.hpp  port.hpp  string.hpp
patches/: window.cpp.cjk
src/: CMakeLists.txt  app.manifest  main.cpp
src/sec/: CMakeLists.txt  config.cpp
src/sec/ai/: CMakeLists.txt  feature.cpp  model.cpp  runtime.cpp
src/sec/cli/: CMakeLists.txt  application.cpp
src/sec/decoder/: CMakeLists.txt  dns.cpp  frame.cpp  ftp.cpp  http.cpp  pipeline.cpp  smtp.cpp  socks5.cpp  ssh.cpp  tls.cpp
src/sec/detector/: CMakeLists.txt  alert.cpp  anomaly.cpp  detection_pipeline.cpp  forest.cpp  pipeline.cpp  port_scan.cpp  port_scan_detector.cpp  rule.cpp  rule_engine.cpp
src/sec/engine/: CMakeLists.txt  capture.cpp
src/sec/mitm/: CMakeLists.txt  arp.cpp  arp_detect.cpp  dns.cpp  dns_detect.cpp  pipeline.cpp  tls.cpp  tls_detect.cpp
src/sec/qt/: CMakeLists.txt  alert_model.cpp  application.cpp  device_model.cpp  traffic_model.cpp
src/sec/qt/qml/: AlertTimeline.qml  Main.qml  TrafficView.qml  qml.qrc
src/sec/sandbox/: CMakeLists.txt  analyzer.cpp  etw_monitor.cpp  hyperv.cpp  qemu.cpp  report.cpp  strace_monitor.cpp  virtualbox.cpp  vmi_monitor.cpp
src/sec/scanner/: CMakeLists.txt  arp.cpp  arp_scanner.cpp  fingerprint.cpp  mdns.cpp  mdns_scanner.cpp  port.cpp  port_scanner.cpp  ssdp.cpp  ssdp_scanner.cpp
src/sec/store/: CMakeLists.txt  database.cpp  migration.cpp  persist.cpp  query.cpp
src/sec/tests/: CMakeLists.txt
src/sec/tests/live_pentest/: CMakeLists.txt  main.cpp
src/sec/tests/redteam/: CMakeLists.txt  main.cpp
src/sec/transport/: CMakeLists.txt  pcap.cpp  raw.cpp
src/sec/tui/: CMakeLists.txt  agent.cpp  ai_chat.cpp  application.cpp  chat.cpp  command.cpp  command_registry.cpp  event.cpp  event_queue.cpp  input.cpp  layout.cpp  markdown.cpp  markdown_renderer.cpp  syntax.cpp  syntax_highlight.cpp  terminal.cpp  terminal_renderer.cpp  text_input.cpp  theme.cpp
src/sec/tui/components/: alert_list.cpp  chat.cpp  chat_panel.cpp  device_table.cpp  input.cpp  input_bar.cpp  scan_panel.cpp  side.cpp  sidebar.cpp  status.cpp  status_bar.cpp  traffic_view.cpp
tests/: CMakeLists.txt  Decoder.cpp  Detector.cpp  Exception.cpp  Fault.cpp  Memory.cpp  Mitm.cpp  Scanner.cpp
